Add json file bridge

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Electron <script>document.write(process.versions.electron)</script></h1>
+    <script type="module" src="./project-structure-loader.js"></script>
 </body>
 </html>
