Basic d3JS integration

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Electron <script>document.write(process.versions.electron)</script></h1>
+    <svg class="d3"></svg>
     <script type="module" src="./project-structure-loader.js"></script>
+    <script src="./graph.js"></script>
 </body>
 </html>
