--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>CPPVisualization</title>
-		<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-	</head>
-	<body>
-		
-		<script type="module">
-			import selectFile from './main.js';
-			window.selectFile = selectFile;
-		</script>
-	
-		<h1>Electron <script>document.write(process.versions.electron)</script></h1>
-		
-		<button onclick="selectFile();">Select File</button> 
-	</body>
+    <head>
+    <meta charset="UTF-8">
+    <title>CPPVisualization</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+</head>
+<body>
+    <script type="module" src="main.js"></script> 
+    <button id="browse-project">Select CPP project folder</button> 
+    </body>
 </html>
