Add interaction on chord graph

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,7 @@
 
 <body>
     <nav>
-        <p>Electron
-            <script>
-                document.write(process.versions.electron)
-            </script>
+        <p>CPPVisualization
         </p>
     </nav>
     <div class="container-main">
@@ -21,6 +18,7 @@
 
         </div>
         <div class="container-grid">
+            <h2>Statistiques du projet</h2>
             <div class="grid">
                 <div class="grid-sizer"></div>
                 <div class="gutter-sizer"></div>
