Add file search

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
     <div class="container-main">
         <div class="container-tree" id="file-tree">
             <div class="file-tree-header">
-                <div>File tree</div>
-                <input type="text" placeholder="Search file...">
+                <div>Search</div>
+                <input type="text" id="search-file" placeholder="Search file...">
             </div>
             <div id="file-tree-files"></div>
         </div>
