Add basic preset buttons

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
         <div class="container-tree" id="file-tree">
             <div class="file-tree-header">
                 <div>Selection preset</div>
-                <button>All</button>
-                <button>Headers</button>
-                <button>Sources</button>
+                <button id="preset-all">All</button>
+                <button id="preset-headers">Headers</button>
+                <button id="preset-sources">Sources</button>
                 <div>Search</div>
                 <input type="text" id="search-file" placeholder="Search file...">
                 <div>Display</div>
