--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
                     <option value="both-direction">Highlight all related files</option>
                 </select>
                 <br><br>
-                <label>Show external libraries: </label><input type="checkbox" id="show-external" name="show-external" checked><br>
+                <label>Show external libraries: </label><input type="checkbox" id="show-external" name="show-external"><br>
                 <br>
 
             </div>
