Updated the about.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,10 @@
                         <svg class="d3-code" overflow="auto"></svg>
                     </div>
                     <div class="graph-display" data-graph-name="About">
-                        <h1>About</h1>
+                        <h1>MSE VI - 2020</h1>
+                        <h2>Bianchi Alexandre, Jeanneret Loïck, Bilali Saljajdin, Rubin Vincent</h2>
+
+                        <p>This project was carried out as part of an MSE project for the visualization course.</p>
                     </div>
                 </div>
             </div>
