Add 2 graphs for line count

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,9 @@
                     <div class="graph-display" data-graph-name="Line count">
                         <svg class="d3-code" overflow="auto"></svg>
                     </div>
+                    <div class="graph-display" data-graph-name="Line count">
+                        <svg class="d3-code-project" overflow="auto"></svg>
+                    </div>
                     <div class="graph-display" data-graph-name="About">
                         <h1>About</h1>
                     </div>
@@ -82,7 +85,6 @@
         </div>
     </div>
     <script type="module" src="./main.js"></script>
-    <script type="module" src="./project-structure-loader.js"></script>
     <script>
         const Masonry = require('masonry-layout')
 
