Fix height graph

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,16 +93,16 @@
                     <div class="graph-display" data-graph-name="Graph coord">
                         <svg class="d3-chord" overflow="auto"></svg>
                     </div>
-                    <div class="graph-display" data-graph-name="Graph tree">
+                    <div class="graph-display hidden" data-graph-name="Graph tree">
                         <svg class="d3-tree" overflow="auto"></svg>
                     </div>
-                    <div class="graph-display" data-graph-name="Line count">
+                    <div class="graph-display hidden" data-graph-name="Line count">
                         <svg class="d3-code" overflow="auto"></svg>
                     </div>
-                    <div class="graph-display" data-graph-name="Line count">
+                    <div class="graph-display hidden" data-graph-name="Line count">
                         <svg class="d3-code-project" overflow="auto"></svg>
                     </div>
-                    <div class="graph-display" data-graph-name="About">
+                    <div class="graph-display hidden" data-graph-name="About">
                         <h1>About</h1>
                     </div>
                 </div>
